--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 *, *::before, ::after {
   box-sizing: border-box;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: larger;
 }
 body {
   padding: 0;
@@ -13,4 +14,49 @@ body {
   background-image: url(https://3.bp.blogspot.com/-_wFRydnnl9E/WtTUN_X0RpI/AAAAAAAABLw/iJKhQKYMLBMRdJfd1nDAqdIfhgUqyF19ACEwYBhgL/s1600/1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+.container {
+  max-width: 80%;
+  background-color: none;
+  border-radius: 8px;
+  padding: 10px;
+  box-shadow: 0 0 10px 2px;
+}
+.btn-grid {
+  display: grid;
+  gap: 10px;
+  padding: 1vh;
+}
+:root {
+  --hue-normal: none;
+  --hue-wrong: 0;
+  --hue-correct: 145;
+}
+.btn {
+  --hue: var(--hue-normal);
+  background-color: hsl(var(--hue), 100%, 50%);
+  border-radius: 3px;
+}
+
+.btn.correct {
+  --hue: var(--hue-correct)
+}
+
+.btn.wrong {
+  color: azure;
+  --hue: var(--hue-wrong)
+}
+
+.start-button, .next-button {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 10px 20px;
+}
+
+button:hover {
+  box-shadow: 0 0 20px 5px;
+}
+
+.hide {
+  display: none;
 }
