--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,8 @@ body {
   font-size: 2rem;
   font-weight: bold;
   padding: 10px 20px;
+  display: flex;
+  margin: 0 auto;
 }
 
 button:hover {
@@ -60,3 +62,5 @@ button:hover {
 .hide {
   display: none;
 }
+
+highScores.sort((a, b) => b.score - a.score);
