Added timer element and functions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,14 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 3rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color:aliceblue;
+}
 .container {
   max-width: 80%;
   background-color: none;
@@ -63,4 +71,3 @@ button:hover {
   display: none;
 }
 
-highScores.sort((a, b) => b.score - a.score);
